# cgm

./: .gitignore  Makefile  README.md  cgm.py  setup.cfg
cgm/: __init__.py  __main__.py  cgm.py  cgm_type_utils.py  cgm_types.py  config.py  enums.py  file.py  helpers.py  utils.py
cgm/types/: __init__.py  app.py  base.py  color.py  color_model.py  command.py  font.py  integer.py  metafile.py  noop.py  parsed_types.py  picture.py  real.py  sdr.py  string.py  vdc.py
utils/: make_cgm_types.py
