[metadata]
name = cgm
version = 0.9
description = This is a tool that helps dissect the information in CGM vector graphics files.
keywords = CGM
license = BSD 3-Clause License
classifiers =
    Development Status :: 2 - Beta
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8+

[options]
packages = find:
scripts = 
    bin/parse_cgm
